@@ -219,7 +219,6 @@
                                         <enabled>false</enabled>
                                     </metadataRepository>
                                     <buildArgs>
-                                        <arg>--enable-preview</arg>
                                         <arg>-H:+UnlockExperimentalVMOptions</arg>
                                         <arg>-march=native</arg>
                                         <!-- Some native image features use the svm dependencies which require additional exports -->
